# SADS

./: README.md
SADS-I/: config.json  prime
SADS-I/include/: characterer.hpp  dataSR.hpp  keyClient.hpp  keyServer.hpp
SADS-I/src/: CMakeLists.txt
SADS-I/src/client/: CMakeLists.txt  characterer.cpp  chunker.cpp  clientMain.cpp  keyClient.cpp  powClient.cpp
SADS-I/src/enclave/km_enclave/: km_enclave.config.xml
SADS-I/src/enclave/pow_enclave/: pow_enclave.config.xml
SADS-I/src/enclave/src/: kmClient.cpp
SADS-I/src/enclave/utils/: iasrequest.cpp
SADS-I/src/keymanage/: CMakeLists.txt  keyServerMain.cpp
SADS-I/src/server/: dataSR.cpp  storageCore.cpp
SADS-II/: config.json
SADS-II/include/: fingerprinter.hpp
SADS-II/src/: CMakeLists.txt
SADS-II/src/client/: CMakeLists.txt  clientMain.cpp  fingerprinter.cpp  keyClient.cpp  sender.cpp
SADS-II/src/enclave/include/: kmClient.hpp  powClient.hpp
SADS-II/src/enclave/km_enclave/: km_enclave.config.xml  km_enclave.cpp
SADS-II/src/enclave/src/: kmClient.cpp  powClient.cpp
SADS-II/src/enclave/utils/: agent_wget.cpp  iasrequest.cpp
SADS-II/src/keymanage/: CMakeLists.txt  keyServer.cpp
SADS-II/src/server/: dataSR.cpp  storageCore.cpp
Sads-I/: CMakeLists.txt  config.json
Sads-I/Scripts/: buildReleaseMode.sh
Sads-I/include/: dataStructure.hpp  powClient.hpp  sender.hpp
Sads-I/key/: prime
Sads-I/pbcwrapper/: Testing
Sads-I/src/: CMakeLists.txt
Sads-I/src/client/: characterer.cpp  clientMain.cpp  fingerprinter.cpp  keyClient.cpp  powClient.cpp  sender.cpp
Sads-I/src/enclave/utils/: CMakeLists.txt
Sads-I/src/keymanage/: keyServer.cpp
Sads-I/src/pbcwrapper/: CMakeLists.txt
Sads-I/src/server/: CMakeLists.txt  ServerMain.cpp  dedupCore.cpp  storageCore.cpp
include/: fingerprinter.hpp  keyClient.hpp  protocol.hpp
